--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ footer a {
     }
 
     .profile h2 {
-        font-size: 5px;
+        font-size: 1.2em;
         white-space: nowrap;
     }
 
