--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ body {
 /* Perfil e imagem */
 .profile {
     position: relative;
-    z-index: 10;
 }
 
 .profile img {
     width: 200px;
     border-radius: 30%;
     margin-bottom: 20px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.6); /* Sombra para profundidade */
     transition: transform 0.3s ease-in-out;
     transform: translateZ(50px); /* Imagem levemente à frente */
 }
