--- a/style.css
+++ b/style.css
@@ -180,16 +180,9 @@ footer a {
         padding:0;
     }
 
-    .profile h1 {
-        font-size: 22px; /* Reduz o título em telas menores */
-        white-space: nowrap;
-        margin: 0;
-        padding:0;
-        justify-content: center;
-        
-    }
+    
 
-    .profile h2 {
+    .profile h1,h2,p {
         margin:0;
         padding:0;
         font-size: 30px;
@@ -200,8 +193,6 @@ footer a {
     .profile p {
         font-size: 15px;
         margin-top:40px;
-        padding: 0;
-        justify-content: center;
 
     }
 
