--- a/style.css
+++ b/style.css
@@ -180,12 +180,19 @@ footer a {
         padding:0;
     }
 
-    
+    .profile h1 {
+        font-size: 42px; /* Reduz o título em telas menores */
+        white-space: nowrap;
+        margin: 0;
+        padding:0;
+        justify-content: center;
+        
+    }
 
-    .profile h1,h2,p {
+    .profile h2 {
         margin:0;
         padding:0;
-        font-size: 30px;
+        font-size: 22px;
         white-space: nowrap;
         justify-content: center;
     }
@@ -193,6 +200,8 @@ footer a {
     .profile p {
         font-size: 15px;
         margin-top:40px;
+        padding: 0;
+        justify-content: center;
 
     }
 
