--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ footer a {
 
     .profile img {
         width: 200px; /* Ajusta o tamanho da imagem em telas menores */
-        margin:0;
+        margin: -5px;
         padding:0;
     }
 
@@ -192,7 +192,7 @@ footer a {
     .profile h2 {
         margin:0;
         padding:0;
-        font-size: 26px;
+        font-size: 24px;
         white-space: nowrap;
         justify-content: center;
     }
