--- a/style.css
+++ b/style.css
@@ -203,7 +203,9 @@ footer a {
         padding: 0;
         font-size: 15px;
         text-align: justify;
-        
+        word-spacing: 0; /* Remove qualquer espaçamento extra entre palavras */
+        line-height: 1.5; /* Ajusta a altura das linhas para melhor legibilidade */
+        hyphens: auto; /* Permite a quebra de palavras conforme necessário */
 
     }
 
